# Skypro_2100

src/: .gitignore
src/tests/: test_arrs.py
test/: pyproject.toml
tests/: test_arrs.py
